--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     >
       <img
         class="project-image"
-        src="D:\Walkover week-3(HTML)\Images\main.jpg"
+        src".\Images\main.jpg"
         alt="project"
       />
       <p class="project-title">
@@ -79,7 +79,7 @@
     >
       <img
         class="project-image"
-        src="D:\Walkover week-3(HTML)\Images\TODO.jpg"
+        src=".\Images\TODO.jpg"
         alt="project"
       />
       <p class="project-title">
