--- a/Tribute page.html
+++ b/Tribute page.html
@@ -13,7 +13,7 @@
   <figure id="img-div">
     <img
       id="image"
-      src="D:\Walkover week-3(HTML)\Images\main_image.jpg"
+      src=".\Images\main_image.jpg"
       alt="Gandhi in London, 1931"
     />
     <figcaption id="img-caption">
