--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     >
       <img
         class="project-image"
-        src".\Images\main.jpg"
+        src"./Images/main.jpg"
         alt="project"
       />
       <p class="project-title">
