--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     >
       <img
         class="project-image"
-        src=".\Images\TODO.jpg"
+        src="https://raw.githubusercontent.com/shweta300901/My-Portfolio/main/Images/TODO.JPG"
         alt="project"
       />
       <p class="project-title">
