--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     >
       <img
         class="project-image"
-        src="./Images/main.jpg"
+        src="https://raw.githubusercontent.com/shweta300901/My-Portfolio/main/Images/main.JPG"
         alt="project"
       />
       <p class="project-title">
