--- a/Feedback Form.html
+++ b/Feedback Form.html
@@ -69,8 +69,8 @@
       <select id="dropdown" name="role" class="form-control" required>
         <option disabled selected value>Select current role</option>
         <option value="student">Student</option>
-        <option value="job">Full Time Job</option>
-        <option value="learner">Full Time Learner</option>
+        <option value="job">Employed</option>
+        <option value="learner">Unemployed</option>
         <option value="preferNo">Prefer not to say</option>
         <option value="other">Other</option>
       </select>
