--- a/BMI Calculator/over.html
+++ b/BMI Calculator/over.html
@@ -193,6 +193,15 @@
             
         </ol>
 
+<footer>
+  <p>
+    Made with <i class="fas fa-heart"></i>
+  </p>
+  <p>
+    &copy; Created for Assessment Only
+    
+  </p>
+</footer>
 
 </div>
 </body>
