--- a/BMI Calculator/under.html
+++ b/BMI Calculator/under.html
@@ -57,5 +57,16 @@
    </ul>
      
 </div>
+
+<footer>
+  <p>
+    Made with <i class="fas fa-heart"></i>
+  </p>
+  <p>
+    &copy; Created for Assessment Only
+    
+  </p>
+</footer>
+
 </body>
 </html>
