--- a/Tribute page.html
+++ b/Tribute page.html
@@ -5,6 +5,20 @@
   <title>Tribute Page</title>
   <link rel="icon" type="image/png" href=".\Images\tribute-icon.png">
   <link rel="stylesheet" href="Tribute Page.css"/>
+  <link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+  integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+  crossorigin="anonymous"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
+  rel="stylesheet"
+/>
 </head>
 <body>
 <main id="main">
@@ -80,5 +94,16 @@
     </h3>
   </section>
 </main>
+
+<footer>
+  <p>
+    Made with <i class="fas fa-heart"></i>
+  </p>
+  <p>
+    &copy; Created for Assessment Only
+    
+  </p>
+</footer>
+
 </body>
 </html>
