--- a/BMI Calculator/about.html
+++ b/BMI Calculator/about.html
@@ -89,6 +89,15 @@
      <button type="button" id="btn" class="btn btn-info">Calculate BMI</button>
      </a>
      </div>
- 
+ <footer>
+  <p>
+    Made with <i class="fas fa-heart"></i>
+  </p>
+  <p>
+    &copy; Created for Assessment Only
+    
+  </p>
+</footer>
+
 </body>
 </html>
