--- a/BMI Calculator/base.html
+++ b/BMI Calculator/base.html
@@ -87,6 +87,15 @@
       </a>
      
       </div> 
+<footer>
+  <p>
+    Made with <i class="fas fa-heart"></i>
+  </p>
+  <p>
+    &copy; Created for Assessment Only
+    
+  </p>
+</footer>
 
 
 </body>
